--- a/core3/session-api/trunk/pom.xml
+++ b/core3/session-api/trunk/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>org.cytoscape</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.0.0-alpha3</version>
   </parent>
 
   <properties>
@@ -20,6 +20,12 @@
   <name>${bundle.symbolicName}</name>
 
   <packaging>bundle</packaging>
+
+  <scm>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/session-api/trunk</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/session-api/trunk</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/session-api/trunk</url>
+  </scm>
 
   <repositories>
       <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
@@ -110,44 +116,44 @@
         <dependency>
             <groupId>org.cytoscape</groupId>
             <artifactId>event-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>3.0.0-alpha1</version>
         </dependency>
         <dependency>
             <groupId>org.cytoscape</groupId>
             <artifactId>model-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>3.0.0-alpha1</version>
         </dependency>
         <dependency>
             <groupId>org.cytoscape</groupId>
             <artifactId>viewmodel-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>3.0.0-alpha1</version>
         </dependency>
                 <dependency>
             <groupId>org.cytoscape</groupId>
             <artifactId>vizmap-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>3.0.0-alpha1</version>
         </dependency>
         <dependency>
             <groupId>org.cytoscape</groupId>
             <artifactId>presentation-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>3.0.0-alpha1</version>
         </dependency>
         <dependency>
             <groupId>org.cytoscape</groupId>
             <artifactId>property-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>3.0.0-alpha1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.8.1</version>
-      <scope>test</scope>
-    </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
