--- a/core3/io-api/trunk/pom.xml
+++ b/core3/io-api/trunk/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>1.0-SNAPSHOT</version>
+		<version>3.0.0-alpha1</version>
 	</parent>
 
 	<properties>
@@ -22,6 +22,12 @@
 	<name>${bundle.symbolicName} [${bundle.namespace}]</name>
 
 	<packaging>bundle</packaging>
+
+	<scm>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/io-api/trunk</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/io-api/trunk</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/io-api/trunk</url>
+	</scm>
 
 	<build>
 		<resources>
@@ -96,27 +102,27 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>presentation-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 		</dependency>
 		<dependency>
         	<groupId>org.cytoscape</groupId>
       		<artifactId>vizmap-api</artifactId>
-      		<version>1.0-SNAPSHOT</version>
+      		<version>3.0.0-alpha1</version>
        </dependency>
        <dependency>
       		<groupId>org.cytoscape</groupId>
       		<artifactId>work-api</artifactId>
-      		<version>1.0-SNAPSHOT</version>
+      		<version>3.0.0-alpha1</version>
     	</dependency>
        <dependency>
       		<groupId>org.cytoscape</groupId>
       		<artifactId>session-api</artifactId>
-      		<version>1.0-SNAPSHOT</version>
+      		<version>3.0.0-alpha1</version>
     	</dependency>
     	<dependency>
 			<groupId>junit</groupId>
