--- a/csplugins/trunk/soc/maital/EnhancedSearch2/resources/plugin.props
+++ b/csplugins/trunk/soc/maital/EnhancedSearch2/resources/plugin.props
@@ -10,7 +10,7 @@ pluginName=EnhancedSearch
 
 # Description used to give users information about the plugin such as what it does.  
 # Html tags are encouraged for formatting purposes.
-pluginDescription=Perform search on multiple attribute fields using logical operators and wildcards. Locate nodes and edges of interest based on their attributes and highlight them on the network. The simple query syntax is detailed in the URL below.
+pluginDescription=Perform search on multiple attributes using logical operators and wildcards. Locate nodes and edges of interest based on their attributes and highlight them on the network. Reference to the simple query syntax is provided through right-click menu.
 
 # Plugin version number, this must be two numbers separated by a decimlal.  Ex. 0.2, 14.03
 pluginVersion=1.2
@@ -24,11 +24,11 @@ pluginCategory=Analysis
 # -- The following properties are OPTIONAL -- #
 
 # URL to a website that gives more information about your plugin, Ex. http://my-lab-site.org
-projectURL=http://conklinwolf.ucsf.edu/genmappwiki/Google_Summer_of_Code_2007/Maital
+projectURL=http://bioinformatics.oxfordjournals.org/content/24/12/1465
 
 # List of authors.  Note each author and institution pair are separated by a : (colon)
 # each additional author institution pair must be separated from other pairs bye a ; (semicolon)
 pluginAuthorsIntsitutions=Maital Ashkenazi:Evogene
 
 # Date this plugin/plugin version was released
-releaseDate=July 20, 2010
+releaseDate=October 30, 2010
