--- a/cytoscape/trunk/corelibs/util.intr/pom.xml
+++ b/cytoscape/trunk/corelibs/util.intr/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.corelibs</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0-beta4-SNAPSHOT</version>
+    <version>2.8.0</version>
   </parent>
 
   <artifactId>util-intr</artifactId>
