--- a/cytoscape/trunk/coreplugins/AutomaticLayout/pom.xml
+++ b/cytoscape/trunk/coreplugins/AutomaticLayout/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.coreplugins</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0-beta4-SNAPSHOT</version>
+    <version>2.8.0</version>
   </parent>
 
   <artifactId>automatic-layout</artifactId>
