--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -4,7 +4,7 @@
   <groupId>cytoscape</groupId>
   <artifactId>parent</artifactId>
   <packaging>pom</packaging>
-  <version>2.8.0-beta4-SNAPSHOT</version>
+  <version>2.8.0</version>
   <name>Cytoscape Parent POM</name>
 
   <properties>
@@ -182,9 +182,9 @@
   </distributionManagement>
 
   <scm>
-    <connection>scm:svn:http://chianti.ucsd.edu/svn/cytoscape/trunk</connection>
-    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/cytoscape/trunk</developerConnection>
-    <url>http://chianti.ucsd.edu/svn/cytoscape/trunk</url>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/cytoscape/tags/parent-2.8.0</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/cytoscape/tags/parent-2.8.0</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/cytoscape/tags/parent-2.8.0</url>
   </scm>
 
 
