--- a/cytoscape/trunk/archetypes/ant-sample-plugin/pom.xml
+++ b/cytoscape/trunk/archetypes/ant-sample-plugin/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>cytoscape.archetypes</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0</version>
+    <version>2.8.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>ant-sample-plugin</artifactId>
