--- a/cytoscape/trunk/corelibs/phoebe.dnd/pom.xml
+++ b/cytoscape/trunk/corelibs/phoebe.dnd/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.corelibs</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0</version>
+    <version>2.8.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>phoebe-dnd</artifactId>
