--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -337,6 +337,13 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
+		<!-- Attribute Browser -->
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>table-browser-impl</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<!-- cytoscape layouts -->
 <!--
 		<dependency>
@@ -450,8 +457,8 @@
 		</dependency>
 	    <dependency>
 	    	<groupId>org.cytoscape.wrappers</groupId>
-			<artifactId>org.swinglabs.swing-layout</artifactId>
-			<version>1.0.3</version>
+		<artifactId>org.swinglabs.swing-layout</artifactId>
+		<version>1.0.3</version>
 	    </dependency>
 
 		<!-- If you want to run your plugin, add dependencies below -->
