--- a/core3/io-impl/trunk/pom.xml
+++ b/core3/io-impl/trunk/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>parent</artifactId>
-		<version>3.0.0-alpha3</version>
+		<version>3.0.0-alpha4-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -86,8 +86,7 @@
 		
 		<dependency>
 			<groupId>com.lowagie.text</groupId>
-			<artifactId>com.springsource.com.lowagie.text
-			</artifactId>
+			<artifactId>com.springsource.com.lowagie.text</artifactId>
 			<version>2.0.8</version>
 		</dependency>
 		<!--
