--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -275,7 +275,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>log-swing</artifactId>
+			<artifactId>log-swing-impl</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -409,39 +409,6 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>psi-mi-impl</artifactId>
 			<version>1.0-SNAPSHOT</version>
-		</dependency>
-
-		<!-- JAXB bundles and their dependencies -->
-		<!-- Required by PSI-MI bundle -->
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>com.springsource.javax.xml.bind</artifactId>
-			<version>2.2.0</version>
-		</dependency>		
-		<dependency>
-			<groupId>com.sun.xml</groupId>
-			<artifactId>com.springsource.com.sun.xml.bind</artifactId>
-			<version>2.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml</groupId>
-			<artifactId>com.springsource.com.sun.xml.fastinfoset</artifactId>
-			<version>1.2.2</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.xml.stream</groupId>
-			<artifactId>com.springsource.javax.xml.stream</artifactId>
-			<version>1.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.activation</groupId>
-			<artifactId>com.springsource.javax.activation</artifactId>
-			<version>1.1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jvnet.staxex</groupId>
-			<artifactId>com.springsource.org.jvnet.staxex</artifactId>
-			<version>1.0.0</version>
 		</dependency>
 
 		<!-- Required by plugin manager -->
