--- a/core3/misc-util/trunk/pom.xml
+++ b/core3/misc-util/trunk/pom.xml
@@ -22,30 +22,30 @@
   <packaging>bundle</packaging>
 
   <repositories>
-      <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
-      <repository>
-          <id>cytoscape_snapshots</id>
-          <snapshots>
-            <enabled>true</enabled>
-          </snapshots>
-          <releases>
-            <enabled>false</enabled>
-          </releases>
-          <name>Cytoscape Snapshots</name>
-          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
-       </repository>
-       <!-- bootstrap for cytoscape dependencies, namely the parent POM releases -->
-       <repository>
-          <id>cytoscape_releases</id>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-          <releases>
-            <enabled>true</enabled>
-          </releases>
-          <name>Cytoscape Releases</name>
-          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
-       </repository>
+    <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
+    <repository>
+      <id>cytoscape_snapshots</id>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <name>Cytoscape Snapshots</name>
+      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+    </repository>
+    <!-- bootstrap for cytoscape dependencies, namely the parent POM releases -->
+    <repository>
+      <id>cytoscape_releases</id>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <name>Cytoscape Releases</name>
+      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
+    </repository>
   </repositories>
 
   <build>
@@ -54,8 +54,8 @@
         <directory>src/main/resources</directory>
       </resource>
       <!--
-       | example additional resource entries, useful when building Eclipse RCP applications
-      -->
+	  | example additional resource entries, useful when building Eclipse RCP applications
+	-->
       <resource>
         <directory>.</directory>
         <includes>
@@ -71,9 +71,9 @@
         <artifactId>maven-pax-plugin</artifactId>
         <version>1.4</version>
         <!--
-           | enable improved OSGi compilation support for the bundle life-cycle.
-           | to switch back to the standard bundle life-cycle, move this setting
-           | down to the maven-bundle-plugin section
+            | enable improved OSGi compilation support for the bundle life-cycle.
+            | to switch back to the standard bundle life-cycle, move this setting
+            | down to the maven-bundle-plugin section
           -->
         <extensions>true</extensions>
       </plugin>
@@ -82,25 +82,32 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <version>1.4.3</version>
         <!--
-         | the following instructions build a simple set of public/private classes into an OSGi bundle
-        -->
+            | the following instructions build a simple set of public/private classes into an OSGi bundle
+          -->
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
             <Bundle-Version>${pom.version}</Bundle-Version>
             <!--
-             | assume public classes are in the top package, and private classes are under ".internal"
-            -->
+		| assume public classes are in the top package, and private classes are under ".internal"
+              -->
             <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
             <Private-Package>${bundle.namespace}.internal.*</Private-Package>
             <!--
-             | each module can override these defaults in their osgi.bnd file
-            -->
+		| each module can override these defaults in their osgi.bnd file
+              -->
             <_include>-osgi.bnd</_include>
           </instructions>
         </configuration>
       </plugin>
     </plugins>
   </build>
-
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
