--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -261,6 +261,11 @@
 			<artifactId>spacial</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>equations-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 		
 		<!--<dependency>
 			<groupId>org.cytoscape</groupId>
