--- a/core3/model-impl/trunk/pom.xml
+++ b/core3/model-impl/trunk/pom.xml
@@ -102,7 +102,7 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>equations-impl</artifactId>
 			<version>1.0-SNAPSHOT</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
