--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -271,14 +271,12 @@
 			<artifactId>equations-impl</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-		
-		<!--<dependency>
+		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>vizmap-gui-impl</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-
-		--><dependency>
+		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>default-mappings</artifactId>
 			<version>1.0-SNAPSHOT</version>
