--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -166,6 +166,11 @@
 			<artifactId>work-swing-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 	</dependency>
+	<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>io-api</artifactId>
+			<version>3.0.0-alpha1</version>
+	</dependency>
     
 
     <dependency>
