--- a/core3/vizmap-gui-api/trunk/pom.xml
+++ b/core3/vizmap-gui-api/trunk/pom.xml
@@ -79,6 +79,11 @@
 			<artifactId>vizmap-api</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>presentation-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 </project>
