--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -224,7 +224,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>session-impl</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
@@ -421,24 +421,23 @@
 		</dependency>
 
 		<!-- Required by plugin manager -->
-	    <dependency>
-	    	<groupId>org.cytoscape.wrappers</groupId>
+		<dependency>
+			<groupId>org.cytoscape.wrappers</groupId>
 			<artifactId>org.apache.lucene</artifactId>
 			<version>3.0.2</version>
-	    </dependency>
-		<dependency>
-		    <groupId>org.jdom</groupId>
-		    <artifactId>com.springsource.org.jdom</artifactId>
-		    <version>1.1.0</version>
 		</dependency>
-	    <dependency>
-	    	<groupId>org.cytoscape.wrappers</groupId>
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>com.springsource.org.jdom</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape.wrappers</groupId>
 		<artifactId>org.swinglabs.swing-layout</artifactId>
 		<version>1.0.3</version>
-	    </dependency>
+		</dependency>
 
 		<!-- If you want to run your plugin, add dependencies below -->
-
 
 	</dependencies>
 
