--- a/core3/test-support/trunk/pom.xml
+++ b/core3/test-support/trunk/pom.xml
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha2-SNAPSHOT</version>
       <type>test-jar</type>
     </dependency>
     <dependency>
@@ -43,7 +43,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
@@ -59,13 +59,20 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-impl</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>viewmodel-impl</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    
+	<dependency>
+  		<groupId>org.cytoscape</groupId>
+  		<artifactId>equations-impl</artifactId>
+  		<version>1.0-SNAPSHOT</version>
+	</dependency>
+    
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
