--- a/core3/editor-impl/trunk/pom.xml
+++ b/core3/editor-impl/trunk/pom.xml
@@ -122,11 +122,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>core-task-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
 			<artifactId>dnd-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
@@ -134,6 +129,11 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>swing-application-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>core-task-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
