--- a/core3/test-support/trunk/pom.xml
+++ b/core3/test-support/trunk/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -34,7 +34,7 @@
       <version>1.0-SNAPSHOT</version>
       <type>test-jar</type>
     </dependency>
-	<!-- the APIs we're supporting - these should remain relatively static -->
+    <!-- the APIs we're supporting - these should remain relatively static -->
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>event-api</artifactId>
@@ -67,11 +67,11 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     
-	<dependency>
-  		<groupId>org.cytoscape</groupId>
-  		<artifactId>equations-impl</artifactId>
-  		<version>1.0-SNAPSHOT</version>
-	</dependency>
+    <dependency>
+      <groupId>org.cytoscape</groupId>
+      <artifactId>equations-impl</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
     
     <dependency>
       <groupId>org.mockito</groupId>
