--- a/csplugins/trunk/ucsd/ruschein/PanGIA/resources/plugin.props
+++ b/csplugins/trunk/ucsd/ruschein/PanGIA/resources/plugin.props
@@ -3,5 +3,6 @@ pluginDescription=PanGIA (Physical and Genetic Interaction Alignment) is a plugi
 pluginVersion=1.0
 cytoscapeVersion=2.8
 pluginCategory=Analysis
-pluginAuthorsInstitutions=Gregory Hannum:UCSD,Rohith Srivas:UCSD,Johannes Ruscheinski:UCSD,Kei Ono:UCSD,Peng-Liang Wang:UCSD,Michael Smoot:UCSD,Trey Ideker:UCSD
-releaseDate=December 8, 2010
+pluginAuthorsInstitutions=Gregory Hannum, Rohith Srivas, Johannes Ruscheinski, Kei Ono, Peng-Liang Wang, Michael Smoot, Trey Ideker:UCSD
+releaseDate=December 9, 2010
+projectURL=http://prosecco.ucsd.edu/PanGIA
